[package]
name = "embedded-hal-error"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = { version = "1.0.0", git = "https://github.com/rust-embedded/embedded-hal.git" }
embedded-io = { version = "0.6.1", git = "https://github.com/rust-embedded/embedded-hal.git" }
embedded-can = { version = "0.4.1", git = "https://github.com/rust-embedded/embedded-hal.git" }
embedded-hal-nb = { version = "1.0.0", git = "https://github.com/rust-embedded/embedded-hal.git" }

[dev-dependencies]
thiserror = { version = "1.0.63", git = "https://github.com/quartiq/thiserror.git", branch = "no-std", default-features = false }
